--- a/plate_config.html
+++ b/plate_config.html
@@ -18,6 +18,7 @@
         <select id="node-config-input-model">
             <option value="RELAYplate">RELAYplate</option>
             <option value="DAQCplate">DAQCplate</option>
+            <option value="DAQC2plate">DAQC2plate</option>
             <option value="MOTORplate">MOTORplate</option>
         </select>
     </div>
