Change All Gone

--- a/node_template.html
+++ b/node_template.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('foo', {
-        category: 'Pi-Plates',
+        category: 'Pi-Plates-New',
         color: '#a6bbcf',
         defaults: {
             name: { value: ''}
